--- a/index.html
+++ b/index.html
@@ -431,7 +431,13 @@
 
             <button type="submit" class="submit-button">Valider</button>
         </form>
+
+        <!-- Formulaire pour lancer le test de connexion à la base de données avec test_connection.php -->
+        <form action="test_connection.php" method="post" style="margin-top: 20px;">
+            <button type="submit">Tester la connexion à la base de données</button>
+        </form>
     </div>
 
     <script src="script.js"></script>
 </body>
+</html>
