--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <div id="connection-result" style="margin-top: 10px;"></div>
         </form>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="script.js"></script>
 </body>
 </html>
